syntax = "proto3";

option go_package = "pb";
import "github.com/bifrostcloud/protoc-gen-httpclient/proto/types.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.unmarshaler_all) = false;
message Package {
    string package_name = 1;
    string package_path = 2;
}
message Input {
    string field_name = 1; 
    string field_value = 2; 
}
message Base {
    string package = 1; 
    repeated Package imports = 2 [(gogoproto.nullable) = false] ; 
    repeated Service services = 3 [(gogoproto.nullable) = false] ; 
}
message Service {
    string upper_camel_case_service_name = 1; 
    string lower_camel_case_service_name = 2; 
    string auth = 3; 
    repeated Method methods = 4 [(gogoproto.nullable) = false] ; 
}
message Method {
    string upper_camel_case_service_name = 1; 
    string upper_camel_case_method_name = 2; 
    string input_type = 3; 
    Fields input_fields = 4 [(gogoproto.nullable) = false] ; 
    string output_type = 5; 
    Fields output_fields = 6 [(gogoproto.nullable) = false] ; 
    string auth = 7; 
    RequestOptions request_options = 8 [(gogoproto.nullable) = false] ; 
}
message Fields {
    repeated FieldImport field_import = 1 [(gogoproto.nullable) = false] ; 
    string type_name = 2; 
    string type = 3; 
    string upper_camel_case = 4; 
    repeated string base = 5; 
    repeated string lowercase = 6; 
    repeated string dot_notation = 7; 
    repeated string param_case = 8; 
}
message FieldImport {
    string name = 1; 
    string tag = 2; 
}
